Code/ROS2_Code/roverbrain_ws/log/build_2025-07-24_02-40-12/roverbrain_pkg/stderr.log
  File "/home/rover/roverbrain_ws/install/roverbrain_pkg/lib/python3.12/site-packages/roverbrain_pkg/steering_control.py", line 17
    Serial write servo angle to arduino
           ^^^^^
SyntaxError: invalid syntax

